# Triarch

./: .env.example  .gitignore  CNAME  README.md  contexto.md  contexto.txt  git_push.ps1  index.html  pyproject.toml  setup_git.ps1
.claude/: launch.json
.streamlit/: config.toml
assets/js/: app.js  bt-engine.js
audit/: obsidian_writer.py  store.py
config/: runtime.py  runtime.yaml  settings.py  symbols.yaml
confluence/: filter.py
dashboard/: app.py  app.py.bak
data/: sample.json
data/ohlc/: EURUSD.json  NAS100.json  XAUUSD.json  manifest.json
data_layer/: mt5_client.py
docs/: README.md  architecture.md  index.html  setup-mt5-demo.md
docs/assets/css/: styles.css
docs/assets/js/: app.js
docs/data/ohlc/: NAS100.json  XAUUSD.json  manifest.json
engine/: indicators.py  orchestrator.py
executor/: approval.py  auto.py  base.py  factory.py  signal_only.py  sizing.py  trade_monitor.py
learning/: postmortem.py
risk/: manager.py
scripts/: backtest.py  check_trading.py  connect_mt5.py  db_summary.py  diagnose_mt5.py  export_ohlc.py  export_web.py  fetch_history.py  refresh_web.py  run_live.py  serve.py
signals/: notifiers.py  schema.py
strategies/: base.py  bb_mr.py  donchian_break.py  ema_momentum.py  keltner_break.py  macd_cross.py  orb.py  pullback_trend.py  registry.py  rsi_reversal.py  scalper.py  vwap_mr.py
tests/: test_confluence.py  test_indicators.py  test_orb.py  test_risk.py  test_strategies_smoke.py
