[project]
name = "triarch"
version = "0.1.0"
description = "MT5 multi-asset trading bot — codename Triarch"
authors = [{name = "Frago", email = "jeanpaulfrago10@gmail.com"}]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "MetaTrader5>=5.0.45",   # Windows-only oficial MT5 Python API
    "pydantic>=2.6",         # Schemas
    "pydantic-settings>=2.2",# .env loader
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",           # symbols.yaml
    "loguru>=0.7",           # logging humano
    "streamlit>=1.32",       # dashboard
    "plotly>=5.20",          # charts
    "rich>=13.7",            # CLI output
    "typer>=0.12",           # CLI entrypoints
    "httpx>=0.27",           # llamadas a APIs (Telegram, etc.)
    "SQLAlchemy>=2.0",       # SQLite ORM
    "tenacity>=8.2",         # retries
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
]
notify = [
    "python-telegram-bot>=21.0",
]

[project.scripts]
triarch-connect = "scripts.connect_mt5:main"
triarch-run = "scripts.run_live:main"
triarch-backtest = "scripts.backtest:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "data_layer*",
    "engine*",
    "strategies*",
    "confluence*",
    "risk*",
    "executor*",
    "signals*",
    "audit*",
    "learning*",
    "dashboard*",
    "scripts*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
